# BioFabric-rs

./: .gitignore  Cargo.toml  HIDDEN_TEST_DESIGN.md  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs
crates/cli/src/commands/: align.rs  compare.rs  convert.rs  export_order.rs  extract.rs  info.rs  layout.rs  render.rs  search.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  worker.rs
crates/core/src/alignment/: cycle.rs  groups.rs  jaccard.rs  layout.rs  loader.rs  merge.rs  orphan.rs  scoring.rs
crates/core/src/analysis/: cycle.rs  graph.rs
crates/core/src/export/: image.rs  mod.rs  resolution.rs
crates/core/src/io/: align.rs  gw.rs  mod.rs  session.rs  sif.rs  xml.rs
crates/core/src/layout/: cluster.rs  control_top.rs  default.rs  hierarchy.rs  link_group.rs  mod.rs  result.rs  set.rs  similarity.rs  traits.rs  world_bank.rs
crates/core/src/render/: bucket.rs  buffer.rs  camera.rs  color.rs  display_options.rs  gpu_data.rs  mod.rs  (+5 more)
crates/core/tests/: analysis_tests.rs  hidden_tests.rs  parity_tests.rs  pipeline_stub.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: lib.rs  main.rs
src/analysis/: graph.rs  mod.rs
src/io/: gw.rs  mod.rs  sif.rs
src/layout/: default.rs  mod.rs  result.rs  similarity.rs  traits.rs
src/model/: link.rs  mod.rs  network.rs  node.rs
tests/bench/: run_bench.sh  test_speed.py
tests/hidden/: README.md  hidden_tests.rs
tests/parity/: Dockerfile  README.md  REMAINING_TEST_SURFACE.md  generate_goldens.sh  generate_goldens_inline.sh  test_manifest.toml
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  types.ts
web/src/renderer/: fabric-renderer.ts
web/src/ui/: app.ts  controls.ts  file-loader.ts  info-panel.ts  search.ts
web/src/wasm/: bridge.ts
(+87 files in other folders)
