[package]
name = "biofabric-cli"
description = "Command-line tool for BioFabric network visualization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
biofabric-core = { path = "../core", features = ["png_export"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde_json.workspace = true

[[bin]]
name = "biofabric"
path = "src/main.rs"
