[package]
name = "biofabric-wasm"
description = "WebAssembly bindings for BioFabric network visualization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biofabric-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde.workspace = true
serde_json.workspace = true
js-sys = "0.3"
